相互依頼者用のスクショ画面のレイアウトがおかしいのを修正

--- a/resources/scss/app_c.scss
+++ b/resources/scss/app_c.scss
@@ -7,15 +7,10 @@ body {
     padding-top: 70px;
 }
 
-img.screenshot {
-    width: 180px;
-}
-
-ul#screenshots {
-    list-style-type: none;
+.screenshot {
+    width: 42vw;
 }
 
 .breadcrumb-item a {
     font-size: smaller;
 }
-
